apps/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chiya
  labels:
    app.kubernetes.io/part-of: chiya-shop
